[package]
name = "rust_billion_row_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true

[build]
rustflags = ["-C", "target-cpu=native"]

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
crossbeam = "0.8.4"
hashbrown = "0.14.3"
lexical-core = "0.8.5"
mimalloc = "0.1.39"
num_cpus = "1.16.0"
rayon = "1.9.0"
